<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tell-it</string>
    <string name="search_content_authority" translatable="false">com.spundev.capstone.search</string>

    <!-- Launcher app shortcuts -->
    <!-- Favorites -->
    <string name="app_shortcut_favorites_long">View favorite cards</string>
    <string name="app_shortcut_favorites_short">Favorites</string>
    <string name="app_shortcut_favorites_disabled">Not available</string>
    <!-- Near me -->
    <string name="app_shortcut_near_me_long">View near me cards</string>
    <string name="app_shortcut_near_me_short">Near me</string>
    <string name="app_shortcut_near_me_disabled">Not available</string>

    <!-- Main activity -->
    <string name="tab_local">Local</string>
    <string name="tab_community">Community</string>

    <!-- Local categories fragment -->
    <string name="local_category_favorites">Favorites</string>
    <string name="local_category_near_me">Near me</string>
    <string name="local_category_new">New category</string>
    <string name="quick_card">Quick Card</string>
    <string name="listen_fast">Listen</string>
    <string name="local_category_created">Category created</string>
    <string name="local_category_deleted">Category deleted</string>
    <string name="local_category_updated">Category updated</string>
    <!-- New category dialog -->
    <string name="new_category_name">Name</string>
    <string name="new_category_color">Color</string>
    <string name="new_category_create">Create</string>
    <string name="new_category_cancel">Cancel</string>
    <!-- Category actions bottom sheet -->
    <string name="action_category_edit">Edit</string>
    <string name="action_category_delete">Delete</string>

    <!-- Community categories fragment -->
    <string name="community_empty_categories">No categories found.\nPlease check your internet connection.</string>

    <!-- Local card list activity -->
    <string name="title_activity_card_list_local">Cards</string>
    <string name="empty_cards_local">This category has no cards</string>
    <string name="local_card_deleted">Card deleted</string>
    <string name="local_card_updated">Card updated</string>
    <string name="local_card_created">Card created</string>
    <string name="delete_card_dialog">Delete card</string>
    <string name="delete_card_dialog_action">delete</string>
    <string name="edit_card_dialog_positive">save</string>
    <string name="edit_card_dialog">Edit card</string>
    <string name="new_card_dialog">Create new card</string>
    <string name="new_card_dialog_positive">create</string>
    <string name="error_empty_card_text">You must write something to create a card</string>

    <!-- Community card list activity -->
    <string name="title_activity_card_list_community">Cards</string>
    <string name="empty_cards_community">This category has no cards</string>
    <string name="save_card_content_desc">Save card to local</string>
    <string name="community_card_saved">Card saved</string>
    <!-- Choose category dialog -->
    <string name="choose_category_title">Choose a category</string>
    <string name="choose_category_cancel">Cancel</string>

    <!-- Category details activity -->
    <!-- Card details. Icons content description -->
    <string name="open_card_details_content_desc">Open card details</string>
    <string name="close_card_details_content_desc">Close card details</string>
    <string name="card_details_play">Play card</string>
    <string name="close_more_actions_content_desc">Close more actions menu</string>
    <string name="add_favorites_content_desc">Add to favorites</string>
    <string name="suggest_card_content_desc">Suggest card to the community</string>
    <string name="edit_card_content_desc">Edit card</string>
    <string name="delete_card_content_desc">Delete card</string>

    <!-- TTS activity -->
    <string name="title_tts_activity">Text to speech</string>
    <string name="tts_play">Play</string>
    <string name="tts_stop">Stop</string>
    <string name="tts_edit">Edit text</string>
    <string name="tts_change_text_title">Change text</string>

    <!-- STT activity -->
    <string name="title_activity_stt">Speech to Text</string>
    <string name="press_to_talk">Press to talk</string>
    <string name="stt_button_content_desc">Start listening</string>
    <string name="stt_popup_message">Hello, talk to the phone</string>

    <!-- Near me activity -->
    <string name="title_near_me_activity">Recommended</string>
    <string name="near_me_empty_recommendations">No recommendations found for this location</string>

    <!-- Favorites activity -->
    <string name="title_favorites_activity">Favorites</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="empty_cards_favorite">No favorites</string>

    <!-- Settings activity -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Near me category -->
    <string name="pref_title_near_me_category">Near me</string>
    <string name="pref_description_near_me_category">Show \"Near me\" category</string>
    <string name="pref_near_me_key" translatable="false">pref_near_me_key</string>

    <!-- My Account -->
    <string name="action_my_account">My account</string>
    <string name="title_my_account_activity">My account</string>
    <string name="account_welcome_description">Start using your tell-it account and vote and share cards with the community</string>
    <string name="account_welcome_start_button">Start using my tell-it account</string>
    <string name="account_welcome_cancel_button">Not now</string>
    <string name="account_auth_error">An error occurred</string>
    <string name="account_error_no_connection">no connection</string>
    <string name="account_sign_out_button">Sign out</string>
    <string name="account_signed_in_info">You are signed in as:</string>
    <string name="account_session_open">Welcome</string>
    <string name="account_session_closed">User session closed</string>

    <!-- Add to category chooser -->
    <string name="choose_category_empty">You don\'t have any category to save the card</string>

    <!-- Settings -->
    <!-- Output language -->
    <string name="pref_title_output_language">Output language</string>
    <string name="pref_output_language_key" translatable="false">pref_output_language_key</string>
    <string name="pref_output_language_option_es">Spanish</string>
    <string name="pref_output_language_option_en">English</string>
    <string name="pref_output_language_option_it">Italian</string>
    <string name="pref_output_language_option_fr">Italian</string>
    <string name="pref_output_language_option_de">German</string>
    <string name="pref_output_language_option_pt">Portuguese</string>
    <string name="pref_output_language_option_default" translatable="false">en</string>

    <!-- Search -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search cards</string>
    <string name="title_search_activity">Search results</string>


    <!-- Other -->
    <string name="translate_service_failed">Translation service not available</string>
    <string name="empty_categories">No categories</string>
    <string name="play_services_error">You can\'t make map requests</string>
    <string name="edit_text_title">Edit card</string>
    <string name="edit_category_dialog_title">Edit category</string>
    <string name="empty_cards_search">No search results</string>
    <string name="near_me_change_location_description">Change location</string>
    <string name="shopping_list_widget_title">Favorites</string>
    <string name="widget_ingredient_checkbox_description">Change availability</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_favorites_widget">Favorites</string>
    <string name="account_photo_content_description">User photo</string>
    <string name="category_color_picker_content_description">Color picker</string>
    <string name="category_item_content_description">Category item</string>
    <string name="near_me_content_description">Near me</string>
    <string name="new_category_content_description">New category</string>
    <!-- New strings -->
</resources>
