<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.TTSActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tts_textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            tools:text="Demo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/edit_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/tts_edit"
                android:textColor="?attr/colorAccent"
                app:backgroundTint="@color/white" />

            <!-- Play button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/play_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_speaker_white_24dp"
                android:drawablePadding="@dimen/tts_play_button_drawable_padding"
                android:drawableStart="@drawable/ic_speaker_white_24dp"
                android:text="@string/tts_play" />

            <!-- Stop button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/stop_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:backgroundTint="@color/stopButtonColor"
                android:drawableLeft="@drawable/ic_stop_white_24dp"
                android:drawablePadding="@dimen/tts_play_button_drawable_padding"
                android:drawableStart="@drawable/ic_stop_white_24dp"
                android:text="@string/tts_stop"
                android:visibility="gone" />

        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>


